fix(@vtmn): align icon of VtmnTextInput vertically

--- a/packages/sources/css/src/components/forms/text-input/src/index.css
+++ b/packages/sources/css/src/components/forms/text-input/src/index.css
@@ -76,6 +76,10 @@ textarea.vtmn-text-input {
 .vtmn-text-input ~ span[class^='vtmx-'],
 .vtmn-text-input ~ svg {
   position: absolute;
+  top: 0;
+  bottom: 0;
+  margin-top: auto;
+  margin-bottom: auto;
   font-size: var(--vtmn-typo_title-4-font-size);
   inset-inline-end: var(--vtmn-spacing_3);
   inset-block-end: var(--vtmn-spacing_3);
